# feature-serving-engine

./: CMakeLists.txt  PROMPTS.md  README.md
benchmarks/: CMakeLists.txt  benchmark_main.cpp
cli/: CMakeLists.txt  main.cpp
core/concurrency/: CMakeLists.txt  consumer.cpp  consumer.hpp  producer.cpp  producer.hpp
core/events/: CMakeLists.txt  event.hpp  generator.cpp  generator.hpp
core/features/: CMakeLists.txt  feature_vector.cpp  feature_vector.hpp
core/inference/: CMakeLists.txt  inference_service.cpp  inference_service.hpp  scorer.cpp  scorer.hpp
core/network/: CMakeLists.txt  request.hpp  response.hpp  server.cpp  server.hpp  session.cpp  session.hpp
core/persistence/: CMakeLists.txt  event_log.cpp  event_log.hpp
core/profiling/: CMakeLists.txt  latency_recorder.hpp  timer.hpp
core/queue/: CMakeLists.txt  thread_safe_queue.hpp
core/retrieval/: CMakeLists.txt  feature_retriever.cpp  feature_retriever.hpp  latency_stats.hpp
core/store/: CMakeLists.txt  feature_store.cpp  feature_store.hpp
